--- a/tests/Makefile
+++ b/tests/Makefile
@@ -45,7 +45,7 @@ include $(_CF_DIR)default.cf
 ifndef WINDOWS_HOST
 export LD_LIBRARY_PATH := $(LD_LIBRARY_PATH):$(DGGAL_ABSPATH)obj/$(CONFIG).$(HOST_PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/
 ifdef WINDOWS_TARGET
-export WINEPATH := $(WINEPATH);$(DGGAL_ABSPATH)obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/;$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)/bin/;$(EC_SDK_SRC)/deps/curl-8.5.0/obj/release.$(PLATFORM)$(COMPILER_SUFFIX);$(OPENSSL_BIN_DIR)
+export WINEPATH := $(WINEPATH);$(DGGAL_ABSPATH)obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/;$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/bin/
 RUNNER = wine
 endif
 else
