--- a/bindings/c_fn/Makefile.allinone
+++ b/bindings/c_fn/Makefile.allinone
@@ -8,7 +8,7 @@ BINDMODLOC := obj
 BINDING_MODULE := dggal
 BINDING_NAME := dggal
 MODULE := $(BINDING_NAME)_c_fn
-VERSION := 0.0.4
+VERSION := 0.0.5
 CONFIG := allinone
 # CONTAINS_CXX := defined
 ifndef COMPILER
@@ -82,7 +82,7 @@ LIBS += \
 endif
 
 PRJ_CFLAGS += \
-	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DBINDINGS_SHARED -I. #-DECPRFX=eC_
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DDGGAL_ALLINEONE -I. #-DECPRFX=eC_
 
 #(SPECIFIC_FLAGS)#
 
@@ -96,6 +96,62 @@ OFLAGS += \
 	-L$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib \
 	-L$(BINDMODLOC)
 endif
+
+# PLATFORM-SPECIFIC OPTIONS
+
+ifdef WINDOWS_TARGET
+
+ifndef STATIC_LIBRARY_TARGET
+
+OFLAGS += -static-libgcc
+
+LIBS += \
+	$(call _L,winmm) \
+	$(call _L,kernel32) \
+	$(call _L,user32) \
+	$(call _L,mpr) \
+	$(call _L,advapi32) \
+	$(call _L,shell32)
+
+endif
+
+else
+ifdef LINUX_TARGET
+
+ifndef STATIC_LIBRARY_TARGET
+ifneq ($(ARCH),x32)
+ifneq ($(shell uname -m),x86_64)
+# $(warning ARCH: $(ARCH) -- adding -Wl,--wrap=fcntl64 to OFLAGS)
+OFLAGS += \
+	 -Wl,--wrap=fcntl64
+endif
+endif
+OFLAGS +=
+
+LIBS += \
+	$(call _L,pthread) \
+	$(call _L,m) \
+	$(call _L,dl)
+
+endif
+
+else
+ifdef OSX_TARGET
+
+ifndef STATIC_LIBRARY_TARGET
+OFLAGS +=
+
+LIBS += \
+	$(call _L,pthread) \
+	$(call _L,m) \
+	$(call _L,dl)
+
+endif
+
+endif
+endif
+endif
+
 
 # TARGETS
 
@@ -120,12 +176,12 @@ ifdef LINUX_HOST
 	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO),)
 endif
 endif
-	$(call cp,$(TARGET),$(DGGAL_ABSPATH)$(HOST_SODESTDIR))
+	$(call cp,$(TARGET),$(DGGAL_ABSPATH)$(SODESTDIR))
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
-	$(if $(basename $(basename $(VER))),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(HOST_SODESTDIR)$(LP)$(MODULE)$(SO)$(basename $(basename $(VER))),)
-	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(HOST_SODESTDIR)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
-	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(HOST_SODESTDIR)$(LP)$(MODULE)$(SO),)
+	$(if $(basename $(basename $(VER))),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(MODULE)$(SO)$(basename $(basename $(VER))),)
+	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
+	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(MODULE)$(SO),)
 endif
 endif
 
