--- a/bindings/c_fn/Makefile.allinone
+++ b/bindings/c_fn/Makefile.allinone
@@ -4,10 +4,10 @@ endif
 
 # CORE VARIABLES
 
-BINDMODLOC := obj
 BINDING_MODULE := dggal
 BINDING_NAME := dggal
-MODULE := $(BINDING_NAME)_c_fn
+MODULE := dggal
+TARGET_NAME := $(MODULE)_c_fn
 VERSION := 0.0.5
 CONFIG := allinone
 # CONTAINS_CXX := defined
@@ -20,12 +20,12 @@ TARGET_TYPE = sharedlib
 # FLAGS
 
 ifndef DEBIAN_PACKAGE
-CFLAGS = -std=c++17 -fno-exceptions -fno-rtti -Wcomment
+CFLAGS = -Wcomment
 LDFLAGS =
 endif
 PRJ_CFLAGS =
 CECFLAGS =
-OFLAGS = -Wl,-nostdlib
+OFLAGS = #-Wl,-nostdlib
 LIBS =
 
 ifdef DEBUG
@@ -36,16 +36,18 @@ CONSOLE = -mwindows
 
 # INCLUDES
 
-DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))../../
+DGGALCFN_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))
+
+DGGAL_ABSPATH := $(realpath $(dir $(DGGALCFN_ABSPATH))../../)/
 
 ifndef EC_SDK_SRC
-EC_SDK_SRC := $(DGGAL_ABSPATH)../eC
+EC_SDK_SRC := $(realpath $(dir $(DGGAL_ABSPATH)/)../eC)
 endif
 
 _CF_DIR = $(EC_SDK_SRC)/
 
 include $(_CF_DIR)crossplatform.mk
-include $(_CF_DIR)default.cf
+include $(_CF_DIR)$(COMPILER).cf
 
 # POST-INCLUDES VARIABLES
 
@@ -54,10 +56,10 @@ OBJ = obj/$(BINDING_NAME).$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)
 RES =
 
 ifdef LINUX_TARGET
-TARGET = $(OBJ)$(LP)$(MODULE)$(SO).$(VERSION)
+TARGET = $(OBJ)$(LP)$(TARGET_NAME)$(SO).$(VERSION)
 SONAME = -Wl,-soname,$(LP)$(MODULE)$(SO).0
 else
-TARGET = $(OBJ)$(LP)$(MODULE)$(SO)
+TARGET = $(OBJ)$(LP)$(TARGET_NAME)$(SO)
 SONAME =
 endif
 
@@ -82,20 +84,15 @@ LIBS += \
 endif
 
 PRJ_CFLAGS += \
-	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DDGGAL_ALLINEONE -I. #-DECPRFX=eC_
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DDGGAL_ALLINONE -I. #-DECPRFX=eC_
 
 #(SPECIFIC_FLAGS)#
 
 PRJ_CFLAGS +=  -I../c -I$(EC_SDK_SRC)/bindings/c
 
-ifndef STATIC_LIBRARY_TARGET
 OFLAGS += \
-	-L$(DGGAL_ABSPATH)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/bin \
 	-L$(DGGAL_ABSPATH)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib \
-	-L$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/bin \
-	-L$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib \
-	-L$(BINDMODLOC)
-endif
+	-L$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib
 
 # PLATFORM-SPECIFIC OPTIONS
 
@@ -171,17 +168,17 @@ ifndef NOSTRIP
 endif
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
-	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
-	$(if $(basename $(basename $(VER))),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO)$(basename $(basename $(VER))),)
-	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO),)
+	$(if $(basename $(VER)),ln -sf $(LP)$(TARGET_NAME)$(SO)$(VER) $(OBJ)$(LP)$(TARGET_NAME)$(SO)$(basename $(VER)),)
+	$(if $(basename $(basename $(VER))),ln -sf $(LP)$(TARGET_NAME)$(SO)$(VER) $(OBJ)$(LP)$(TARGET_NAME)$(SO)$(basename $(basename $(VER))),)
+	$(if $(VER),ln -sf $(LP)$(TARGET_NAME)$(SO)$(VER) $(OBJ)$(LP)$(TARGET_NAME)$(SO),)
 endif
 endif
 	$(call cp,$(TARGET),$(DGGAL_ABSPATH)$(SODESTDIR))
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
-	$(if $(basename $(basename $(VER))),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(MODULE)$(SO)$(basename $(basename $(VER))),)
-	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
-	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(MODULE)$(SO),)
+	$(if $(basename $(basename $(VER))),ln -sf $(LP)$(TARGET_NAME)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(TARGET_NAME)$(SO)$(basename $(basename $(VER))),)
+	$(if $(basename $(VER)),ln -sf $(LP)$(TARGET_NAME)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(TARGET_NAME)$(SO)$(basename $(VER)),)
+	$(if $(VER),ln -sf $(LP)$(TARGET_NAME)$(SO)$(VER) $(DGGAL_ABSPATH)$(SODESTDIR)$(LP)$(TARGET_NAME)$(SO),)
 endif
 endif
 
@@ -196,8 +193,9 @@ cleantarget:
 	$(call rm,$(TARGET))
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
-	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)))
-	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO))
+	$(call rm,$(OBJ)$(LP)$(TARGET_NAME)$(SO)$(basename $(basename $(VER))))
+	$(call rm,$(OBJ)$(LP)$(TARGET_NAME)$(SO)$(basename $(VER)))
+	$(call rm,$(OBJ)$(LP)$(TARGET_NAME)$(SO))
 endif
 endif
 
