--- a/Makefile.dgg
+++ b/Makefile.dgg
@@ -37,7 +37,7 @@ ifndef EC_SDK_SRC
 EC_SDK_SRC := $(DGGAL_ABSPATH)../eC
 endif
 
-_CF_DIR = $(EC_SDK_SRC)/
+export _CF_DIR = $(EC_SDK_SRC)/
 include $(_CF_DIR)crossplatform.mk
 
 ifndef WINDOWS_HOST
